--- a/.github/workflows/Running.yml
+++ b/.github/workflows/Running.yml
@@ -43,4 +43,4 @@ jobs:
       uses: ad-m/github-push-action@master
       with:
         branch: 'master'
-        github_token: $ 
+        github_token: ${{ secrets.GITHUB_TOKEN }}
