--- a/schedule.yml
+++ b/schedule.yml
@@ -65,6 +65,7 @@
 - 2024학년도 1학기 등록금 납부
 2024.03.01:
 - 2024학년도 1학기 등록금 납부
+- 삼일절(공휴일)
 2024.03.04:
 - 2024학년도 1학기 개강
 - 2024학년도 1학기 수강신청 정정기간(2차)
@@ -76,3 +77,537 @@
 - 2024학년도 1학기 수강신청 정정기간(2차)
 2024.03.08:
 - 2024학년도 1학기 수강신청 정정기간(2차)
+2024.03.18:
+- 2024년 8월 조기졸업/졸업연장 신청
+2024.03.19:
+- 2024년 8월 조기졸업/졸업연장 신청
+2024.03.20:
+- 2024년 8월 조기졸업/졸업연장 신청
+2024.03.21:
+- 2024년 8월 조기졸업/졸업연장 신청
+2024.03.22:
+- 2024년 8월 조기졸업/졸업연장 신청
+2024.04.01:
+- 2024학년도 1학기 중간 수업평가
+2024.04.02:
+- 2024학년도 1학기 중간 수업평가
+- 개교기념일
+2024.04.03:
+- 2024학년도 1학기 중간 수업평가
+2024.04.04:
+- 2024학년도 1학기 중간 수업평가
+2024.04.05:
+- 2024학년도 1학기 중간 수업평가
+- 개교기념일 대체휴일
+2024.04.06:
+- 2024학년도 1학기 중간 수업평가
+2024.04.07:
+- 2024학년도 1학기 중간 수업평가
+2024.04.08:
+- 2024학년도 1학기 중간 수업평가
+2024.04.09:
+- 2024학년도 1학기 중간 수업평가
+2024.04.10:
+- 2024학년도 1학기 중간 수업평가
+- 22대 국회의원 선거(공휴일)
+2024.04.11:
+- 2024학년도 1학기 중간 수업평가
+2024.04.12:
+- 2024학년도 1학기 중간 수업평가
+2024.04.13:
+- 2024학년도 1학기 중간 수업평가
+2024.04.14:
+- 2024학년도 1학기 중간 수업평가
+2024.04.15:
+- 2024학년도 1학기 중간 수업평가
+- 전공심화 / 복수전공 신청(1차)
+2024.04.16:
+- 2024학년도 1학기 중간 수업평가
+- 전공심화 / 복수전공 신청(1차)
+2024.04.17:
+- 2024학년도 1학기 중간 수업평가
+- 전공심화 / 복수전공 신청(1차)
+2024.04.18:
+- 2024학년도 1학기 중간 수업평가
+- 전공심화 / 복수전공 신청(1차)
+2024.04.19:
+- 2024학년도 1학기 중간 수업평가
+- 전공심화 / 복수전공 신청(1차)
+2024.04.22:
+- 2024학년도 1학기 중간평가(중간고사)
+2024.04.23:
+- 2024학년도 1학기 중간평가(중간고사)
+2024.04.24:
+- 2024학년도 1학기 중간평가(중간고사)
+2024.04.25:
+- 2024학년도 1학기 중간평가(중간고사)
+2024.04.26:
+- 2024학년도 1학기 중간평가(중간고사)
+2024.05.05:
+- 어린이날
+2024.05.06:
+- 어린이날 대체공휴일
+2024.05.15:
+- 부처님오신날(공휴일)
+2024.05.20:
+- 2024학년도 2학기 전과신청
+2024.05.21:
+- 2024학년도 2학기 전과신청
+2024.05.22:
+- 2024학년도 2학기 전과신청
+2024.05.23:
+- 2024학년도 2학기 전과신청
+2024.05.24:
+- 2024학년도 2학기 전과신청
+2024.05.27:
+- 2024학년도 1학기 기말 수업평가(강의평가)
+2024.05.28:
+- 2024학년도 1학기 기말 수업평가(강의평가)
+2024.05.29:
+- 2024학년도 1학기 기말 수업평가(강의평가)
+2024.05.30:
+- 2024학년도 1학기 기말 수업평가(강의평가)
+2024.05.31:
+- 2024학년도 1학기 기말 수업평가(강의평가)
+2024.06.01:
+- 2024학년도 1학기 기말 수업평가(강의평가)
+2024.06.02:
+- 2024학년도 1학기 기말 수업평가(강의평가)
+2024.06.03:
+- 2024학년도 1학기 기말 수업평가(강의평가)
+2024.06.04:
+- 2024학년도 1학기 기말 수업평가(강의평가)
+2024.06.05:
+- 2024학년도 1학기 기말 수업평가(강의평가)
+2024.06.06:
+- 2024학년도 1학기 기말 수업평가(강의평가)
+- 현충일(공휴일)
+2024.06.07:
+- 2024학년도 1학기 기말 수업평가(강의평가)
+2024.06.08:
+- 2024학년도 1학기 기말 수업평가(강의평가)
+2024.06.09:
+- 2024학년도 1학기 기말 수업평가(강의평가)
+2024.06.10:
+- 2024학년도 1학기 기말 수업평가(강의평가)
+- 2024학년도 1학기 기말평가(기말고사)
+2024.06.11:
+- 2024학년도 1학기 기말 수업평가(강의평가)
+- 2024학년도 1학기 기말평가(기말고사)
+- 2024학년도 하계학기 수강신청
+2024.06.12:
+- 2024학년도 1학기 기말 수업평가(강의평가)
+- 2024학년도 1학기 기말평가(기말고사)
+- 2024학년도 하계학기 수강신청
+2024.06.13:
+- 2024학년도 1학기 기말 수업평가(강의평가)
+- 2024학년도 1학기 기말평가(기말고사)
+- 2024학년도 하계학기 수강신청
+2024.06.14:
+- 2024학년도 1학기 기말 수업평가(강의평가)
+- 2024학년도 1학기 기말평가(기말고사)
+2024.06.15:
+- 2024학년도 1학기 기말 수업평가(강의평가)
+2024.06.16:
+- 2024학년도 1학기 기말 수업평가(강의평가)
+2024.06.17:
+- 2024학년도 1학기 기말 수업평가(강의평가)
+- 2024학년도 1학기 보강주간
+- 2024학년도 2학기 재입학 신청
+2024.06.18:
+- 2024학년도 1학기 기말 수업평가(강의평가)
+- 2024학년도 1학기 보강주간
+- 2024학년도 2학기 재입학 신청
+- 2024학년도 하계학기 수강료 납부
+2024.06.19:
+- 2024학년도 1학기 기말 수업평가(강의평가)
+- 2024학년도 1학기 보강주간
+- 2024학년도 2학기 재입학 신청
+- 2024학년도 하계학기 수강료 납부
+2024.06.20:
+- 2024학년도 1학기 기말 수업평가(강의평가)
+- 2024학년도 1학기 보강주간
+- 2024학년도 2학기 재입학 신청
+- 2024학년도 하계학기 수강료 납부
+2024.06.21:
+- 2024학년도 1학기 기말 수업평가(강의평가)
+- 2024학년도 1학기 보강주간
+- 2024학년도 2학기 재입학 신청
+2024.06.22:
+- 2024학년도 2학기 재입학 신청
+2024.06.23:
+- 2024학년도 2학기 재입학 신청
+2024.06.24:
+- 2024학년도 2학기 재입학 신청
+2024.06.25:
+- 2024학년도 2학기 재입학 신청
+2024.06.26:
+- 2024학년도 2학기 재입학 신청
+- 2024학년도 하계학기 강좌 수강기간
+2024.06.27:
+- 2024학년도 2학기 재입학 신청
+- 2024학년도 하계학기 강좌 수강기간
+2024.06.28:
+- 2024학년도 2학기 재입학 신청
+- 2024학년도 하계학기 강좌 수강기간
+2024.06.29:
+- 2024학년도 하계학기 강좌 수강기간
+2024.06.30:
+- 2024학년도 하계학기 강좌 수강기간
+2024.07.01:
+- 2024학년도 하계학기 강좌 수강기간
+- 2024학년도 1학기 성적열람 및 정정
+2024.07.02:
+- 2024학년도 하계학기 강좌 수강기간
+- 2024학년도 1학기 성적열람 및 정정
+2024.07.03:
+- 2024학년도 하계학기 강좌 수강기간
+- 2024학년도 1학기 성적열람 및 정정
+2024.07.04:
+- 2024학년도 하계학기 강좌 수강기간
+- 2024학년도 1학기 성적열람 및 정정
+2024.07.05:
+- 2024학년도 하계학기 강좌 수강기간
+- 2024학년도 1학기 성적열람 및 정정
+2024.07.06:
+- 2024학년도 하계학기 강좌 수강기간
+- 2024학년도 1학기 성적열람 및 정정
+2024.07.07:
+- 2024학년도 하계학기 강좌 수강기간
+- 2024학년도 1학기 성적열람 및 정정
+2024.07.08:
+- 2024학년도 하계학기 강좌 수강기간
+- 2024학년도 1학기 성적열람 및 정정
+2024.07.09:
+- 2024학년도 하계학기 강좌 수강기간
+- 2024학년도 1학기 성적열람 및 정정
+2024.07.10:
+- 2024학년도 하계학기 강좌 수강기간
+- 2024학년도 1학기 성적열람 및 정정
+2024.07.11:
+- 2024학년도 하계학기 강좌 수강기간
+- 2024학년도 1학기 성적열람 및 정정
+2024.07.12:
+- 2024학년도 하계학기 강좌 수강기간
+2024.07.13:
+- 2024학년도 하계학기 강좌 수강기간
+2024.07.14:
+- 2024학년도 하계학기 강좌 수강기간
+2024.07.15:
+- 2024학년도 하계학기 강좌 수강기간
+- 전공심화 / 복수전공 신청(2차)
+2024.07.16:
+- 2024학년도 하계학기 강좌 수강기간
+- 전공심화 / 복수전공 신청(2차)
+2024.07.17:
+- 전공심화 / 복수전공 신청(2차)
+2024.07.18:
+- 전공심화 / 복수전공 신청(2차)
+2024.07.19:
+- 전공심화 / 복수전공 신청(2차)
+2024.07.22:
+- 2024학년도 하계학기 성적열람 및 정정
+2024.07.23:
+- 2024학년도 하계학기 성적열람 및 정정
+2024.07.24:
+- 2024학년도 하계학기 성적열람 및 정정
+2024.07.25:
+- 2024학년도 하계학기 성적열람 및 정정
+2024.08.12:
+- 2024학년도 2학기 수강과목 확인
+2024.08.13:
+- 2024학년도 2학기 수강과목 확인
+2024.08.14:
+- 2024학년도 2학기 수강과목 확인
+2024.08.15:
+- 2024학년도 2학기 수강과목 확인
+- 광복절(공휴일)
+2024.08.16:
+- 2024학년도 2학기 수강과목 확인
+2024.08.19:
+- 2024학년도 2학기 수강신청(1차)
+- 2024학년도 2학기 휴·복학 신청
+2024.08.20:
+- 2024학년도 2학기 수강신청(1차)
+- 2024학년도 2학기 휴·복학 신청
+2024.08.21:
+- 2024학년도 2학기 수강신청(1차)
+- 2024학년도 2학기 휴·복학 신청
+2024.08.22:
+- 2024학년도 2학기 수강신청(1차)
+- 2024학년도 2학기 휴·복학 신청
+- 2024년 8월 학위수여식
+2024.08.23:
+- 2024학년도 2학기 수강신청(1차)
+- 2024학년도 2학기 휴·복학 신청
+2024.08.26:
+- 2024학년도 2학기 등록금 납부
+2024.08.27:
+- 2024학년도 2학기 등록금 납부
+2024.08.28:
+- 2024학년도 2학기 등록금 납부
+2024.08.29:
+- 2024학년도 2학기 등록금 납부
+2024.08.30:
+- 2024학년도 2학기 등록금 납부
+2024.09.02:
+- 2024학년도 2학기 개강
+- 2024학년도 2학기 수강신청 정정기간(2차)
+- 2024학년도 2학기 등록금 납부(추가)
+2024.09.03:
+- 2024학년도 2학기 수강신청 정정기간(2차)
+- 2024학년도 2학기 등록금 납부(추가)
+2024.09.04:
+- 2024학년도 2학기 수강신청 정정기간(2차)
+- 2024학년도 2학기 등록금 납부(추가)
+2024.09.05:
+- 2024학년도 2학기 수강신청 정정기간(2차)
+- 2024학년도 2학기 등록금 납부(추가)
+2024.09.06:
+- 2024학년도 2학기 수강신청 정정기간(2차)
+- 2024학년도 2학기 등록금 납부(추가)
+2024.09.16:
+- 추석연휴(공휴일)
+2024.09.17:
+- 추석연휴(공휴일)
+2024.09.18:
+- 추석연휴(공휴일)
+2024.09.23:
+- 2025년 2월 조기졸업/졸업연장 신청
+2024.09.24:
+- 2025년 2월 조기졸업/졸업연장 신청
+2024.09.25:
+- 2025년 2월 조기졸업/졸업연장 신청
+2024.09.26:
+- 2025년 2월 조기졸업/졸업연장 신청
+2024.09.27:
+- 2025년 2월 조기졸업/졸업연장 신청
+2024.09.30:
+- 2024학년도 2학기 중간 수업평가(강의평가)
+2024.10.01:
+- 2024학년도 2학기 중간 수업평가(강의평가)
+2024.10.02:
+- 2024학년도 2학기 중간 수업평가(강의평가)
+2024.10.03:
+- 2024학년도 2학기 중간 수업평가(강의평가)
+- 개천절(공휴일)
+2024.10.04:
+- 2024학년도 2학기 중간 수업평가(강의평가)
+2024.10.05:
+- 2024학년도 2학기 중간 수업평가(강의평가)
+2024.10.06:
+- 2024학년도 2학기 중간 수업평가(강의평가)
+2024.10.07:
+- 2024학년도 2학기 중간 수업평가(강의평가)
+2024.10.08:
+- 2024학년도 2학기 중간 수업평가(강의평가)
+2024.10.09:
+- 2024학년도 2학기 중간 수업평가(강의평가)
+- 한글날(공휴일)
+2024.10.10:
+- 2024학년도 2학기 중간 수업평가(강의평가)
+2024.10.11:
+- 2024학년도 2학기 중간 수업평가(강의평가)
+2024.10.12:
+- 2024학년도 2학기 중간 수업평가(강의평가)
+2024.10.13:
+- 2024학년도 2학기 중간 수업평가(강의평가)
+2024.10.14:
+- 2024학년도 2학기 중간 수업평가(강의평가)
+- 전공심화 / 복수전공 신청(3차)
+2024.10.15:
+- 2024학년도 2학기 중간 수업평가(강의평가)
+- 전공심화 / 복수전공 신청(3차)
+2024.10.16:
+- 2024학년도 2학기 중간 수업평가(강의평가)
+- 전공심화 / 복수전공 신청(3차)
+2024.10.17:
+- 2024학년도 2학기 중간 수업평가(강의평가)
+- 전공심화 / 복수전공 신청(3차)
+2024.10.18:
+- 2024학년도 2학기 중간 수업평가(강의평가)
+- 전공심화 / 복수전공 신청(3차)
+2024.10.21:
+- 2024학년도 2학기 중간평가(중간고사)
+2024.10.22:
+- 2024학년도 2학기 중간평가(중간고사)
+2024.10.23:
+- 2024학년도 2학기 중간평가(중간고사)
+2024.10.24:
+- 2024학년도 2학기 중간평가(중간고사)
+2024.10.25:
+- 2024학년도 2학기 중간평가(중간고사)
+2024.11.11:
+- 2025학년도 1학기 전과신청
+2024.11.12:
+- 2025학년도 1학기 전과신청
+2024.11.13:
+- 2025학년도 1학기 전과신청
+2024.11.14:
+- 2025학년도 1학기 전과신청
+2024.11.15:
+- 2025학년도 1학기 전과신청
+2024.11.18:
+- 2024학년도 2학기 기말 수업평가(강의평가)
+2024.11.19:
+- 2024학년도 2학기 기말 수업평가(강의평가)
+2024.11.20:
+- 2024학년도 2학기 기말 수업평가(강의평가)
+2024.12.09:
+- 2024학년도 2학기 기말평가(기말고사)
+2024.12.10:
+- 2024학년도 2학기 기말평가(기말고사)
+- 2024학년도 동계학기 수강신청
+2024.12.11:
+- 2024학년도 2학기 기말평가(기말고사)
+- 2024학년도 동계학기 수강신청
+2024.12.12:
+- 2024학년도 2학기 기말평가(기말고사)
+- 2024학년도 동계학기 수강신청
+2024.12.13:
+- 2024학년도 2학기 기말평가(기말고사)
+2024.12.16:
+- 2024학년도 2학기 보강주간
+- 2024학년도 1학기 재입학 신청
+2024.12.17:
+- 2024학년도 2학기 보강주간
+- 2024학년도 1학기 재입학 신청
+- 2024학년도 동계학기 수강료 납부
+2024.12.18:
+- 2024학년도 2학기 보강주간
+- 2024학년도 1학기 재입학 신청
+- 2024학년도 동계학기 수강료 납부
+2024.12.19:
+- 2024학년도 2학기 보강주간
+- 2024학년도 1학기 재입학 신청
+- 2024학년도 동계학기 수강료 납부
+2024.12.20:
+- 2024학년도 2학기 보강주간
+- 2024학년도 1학기 재입학 신청
+2024.12.25:
+- 성탄절(공휴일)
+2024.12.26:
+- 2024학년도 동계학기 강좌 수강
+2024.12.27:
+- 2024학년도 동계학기 강좌 수강
+2024.12.28:
+- 2024학년도 동계학기 강좌 수강
+2024.12.29:
+- 2024학년도 동계학기 강좌 수강
+2024.12.30:
+- 2024학년도 동계학기 강좌 수강
+- 2024학년도 2학기 성적열람 및 정정
+2024.12.31:
+- 2024학년도 동계학기 강좌 수강
+- 2024학년도 2학기 성적열람 및 정정
+2025.01.01:
+- 2024학년도 동계학기 강좌 수강
+- 2024학년도 2학기 성적열람 및 정정
+- 신정(공휴일)
+2025.01.02:
+- 2024학년도 동계학기 강좌 수강
+- 2024학년도 2학기 성적열람 및 정정
+2025.01.03:
+- 2024학년도 동계학기 강좌 수강
+- 2024학년도 2학기 성적열람 및 정정
+2025.01.04:
+- 2024학년도 동계학기 강좌 수강
+- 2024학년도 2학기 성적열람 및 정정
+2025.01.05:
+- 2024학년도 동계학기 강좌 수강
+- 2024학년도 2학기 성적열람 및 정정
+2025.01.06:
+- 2024학년도 동계학기 강좌 수강
+- 2024학년도 2학기 성적열람 및 정정
+- 전공심화 / 복수전공 신청(4차)
+2025.01.07:
+- 2024학년도 동계학기 강좌 수강
+- 2024학년도 2학기 성적열람 및 정정
+- 전공심화 / 복수전공 신청(4차)
+2025.01.08:
+- 2024학년도 동계학기 강좌 수강
+- 2024학년도 2학기 성적열람 및 정정
+- 전공심화 / 복수전공 신청(4차)
+2025.01.09:
+- 2024학년도 동계학기 강좌 수강
+- 2024학년도 2학기 성적열람 및 정정
+- 전공심화 / 복수전공 신청(4차)
+2025.01.10:
+- 2024학년도 동계학기 강좌 수강
+- 전공심화 / 복수전공 신청(4차)
+2025.01.11:
+- 2024학년도 동계학기 강좌 수강
+2025.01.12:
+- 2024학년도 동계학기 강좌 수강
+2025.01.13:
+- 2024학년도 동계학기 강좌 수강
+2025.01.14:
+- 2024학년도 동계학기 강좌 수강
+2025.01.15:
+- 2024학년도 동계학기 강좌 수강
+2025.01.16:
+- 2024학년도 동계학기 강좌 수강
+2025.01.17:
+- 2025학년도 1학기 수강신청(1차)
+2025.01.18:
+- 2025학년도 1학기 수강신청(1차)
+2025.01.19:
+- 2025학년도 1학기 수강신청(1차)
+2025.01.20:
+- 2025학년도 1학기 수강신청(1차)
+2025.01.21:
+- 2025학년도 1학기 수강신청(1차)
+2025.01.22:
+- 2024학년도 동계학기 성적열람 및 정정
+2025.01.23:
+- 2024학년도 동계학기 성적열람 및 정정
+2025.01.24:
+- 2024학년도 동계학기 성적열람 및 정정
+2025.01.28:
+- 설연휴(공휴일)
+2025.01.29:
+- 설연휴(공휴일)
+2025.01.30:
+- 설연휴(공휴일)
+2025.02.10:
+- 2025학년도 1학기 수강과목 확인
+2025.02.11:
+- 2025학년도 1학기 수강과목 확인
+2025.02.12:
+- 2025학년도 1학기 수강과목 확인
+2025.02.13:
+- 2025학년도 1학기 수강과목 확인
+2025.02.14:
+- 2025학년도 1학기 수강과목 확인
+2025.02.17:
+- 2025학년도 1학기 휴·복학 신청
+2025.02.18:
+- 2025학년도 1학기 휴·복학 신청
+2025.02.19:
+- 2025학년도 1학기 휴·복학 신청
+2025.02.20:
+- 2025학년도 1학기 휴·복학 신청
+- 2025년 2월 학위수여식
+2025.02.21:
+- 2025학년도 1학기 휴·복학 신청
+2025.02.24:
+- 2025학년도 1학기 등록금 납부
+2025.02.25:
+- 2025학년도 1학기 등록금 납부
+2025.02.26:
+- 2025학년도 1학기 등록금 납부
+2025.02.27:
+- 2025학년도 1학기 등록금 납부
+2025.02.28:
+- 2025학년도 1학기 등록금 납부
+2025.03.03:
+- 2025학년도 1학기 개강
+- 2025학년도 1학기 수강신청 정정기간(2차)
+2025.03.04:
+- 2025학년도 1학기 수강신청 정정기간(2차)
+2025.03.05:
+- 2025학년도 1학기 수강신청 정정기간(2차)
+2025.03.06:
+- 2025학년도 1학기 수강신청 정정기간(2차)
+2025.03.07:
+- 2025학년도 1학기 수강신청 정정기간(2차)
